 o [SCXML-51] - <assign> with location and expr both containing datamodel
                expressions concatenates old and new values
 o [SCXML-52] - Error on resolving conflicting transitions for compound states
 o [SCXML-53] - Wild card event name handling on transitions is not in line
                with W3C WD
 o [SCXML-54] - Events from custom actions missing payload
 o [SCXML-56] - onentry and onexit child elements of parallel do not have
                parent
 o [SCXML-58] - SCXML not stateless because of State class
 o [SCXML-60] - Possible race condition in AsyncTrigger
 o [SCXML-61] - Clarify interaction patterns for Invoker implementations with
                parent state machine executor

IMPROVEMENTS:

 o [SCXML-41] - Adding information about original expression to evaluation
                error messages
 o [SCXML-46] - Provide a SCXMLListener abstract adapter class
 o [SCXML-55] - Add support for <event> tag

OTHER CHANGES:

 o SCXMLExecutor logs state at a lower severity (changed from log level
   'info' to log level 'debug')

 o The LCA of two states belonging to sibling regions is now the enclosing
   Parallel, rather than the orthogonal State.

 o The regions of a parallel are entered in document order. This is
   implementation-specific behavior and users should not rely on it.

ABOUT COMMONS SCXML:

The Commons SCXML (State Chart XML) project provides a generic
state-machine based execution environment. It borrows most semantics
from its namesake Working Draft at the W3C. Anything that can be
represented as a UML state chart -- business process flows, view
navigation bits, interaction or dialog management, and many more -- can
leverage the Commons SCXML library. The library abstracts out the
environment interfaces, and can be used in numerous server-side and
client-side runtimes.

Please visit the website for project information and documentation:

http://commons.apache.org/scxml/
