@@ -131,7 +131,7 @@
     <dependency>
       <groupId>commons-logging</groupId>
       <artifactId>commons-logging</artifactId>
-      <version>1.1</version>
+      <version>1.1.1</version>
       <url>http://commons.apache.org/logging/</url>
       <properties>
         <comment>&lt;b&gt;Core&lt;/b&gt;
